--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -38,8 +38,7 @@
  <div class="logo" >
      <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
         </div>
-          
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
+        <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
         <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
           <button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">
            Log out
@@ -313,9 +312,7 @@
                 </div>
             </div>
         </main>
-        
     </div>
-
 
 
 <div class="modal" tabindex="-1" role="dialog" id="editModal">
@@ -372,39 +369,37 @@
             </div>
 
    <div style="background-color:black; width:100%; height:0.7em;">
-                     
                     </div>
              <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/Admin/NewPassword" novalidate>
+
+                  <div class="form-group row" style="display:none;">
+                        <label for="userId" class="col-4 col-form-label">username</label>
+                        <div class="col-8">
+                            <input id="userId" name="username" type="password" class="form-control">
+                        </div>
+                    </div>
+
                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">Old password</label>
                         <div class="col-8">
-                            <input id="userId" name="userId" type="password" class="form-control">
+                            <input id="userId" name="oldpassword" type="password" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">New password</label>
                         <div class="col-8">
-                            <input id="Firstname" name="firstName" type="password" class="form-control">
+                            <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="summary" class="col-4 col-form-label">New password</label>
-                        <div class="col-8">
-                            <input id="Lastname" name="lastName" type="password" class="form-control">
-                        </div>
-                    </div>       
+                    </div>      
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
                 </form>
             </div>
-
-            
-
         </div>
     </div>
 </div>
