--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -782,29 +782,31 @@
    <div style="background-color:black; width:100%; height:0.7em;">
                      
                     </div>
-             <div class="modal-header">
+            <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/Admin/NewPassword" novalidate>
+
+                  <div class="form-group row" style="display:none;">
+                        <label for="userId" class="col-4 col-form-label">username</label>
+                        <div class="col-8">
+                            <input id="userId" name="username" type="password" class="form-control">
+                        </div>
+                    </div>
+
                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">Old password</label>
                         <div class="col-8">
-                            <input id="userId" name="userId" type="password" class="form-control">
+                            <input id="userId" name="oldpassword" type="password" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">New password</label>
                         <div class="col-8">
-                            <input id="Firstname" name="firstName" type="password" class="form-control">
+                            <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="summary" class="col-4 col-form-label">New password</label>
-                        <div class="col-8">
-                            <input id="Lastname" name="lastName" type="password" class="form-control">
-                        </div>
-                    </div>       
+                    </div>      
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
