--- a/src/main/resources/templates/Frontend/Main/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/Main/Checkout.mustache
@@ -1,138 +1,286 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>Dashboard - SB Admin</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Bootstrap 4 Carousel with Multiple Items</title>
+    <!-- CSS -->
     <link href="/css/User/userstyles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/Main/animate.css">
+    <link rel="stylesheet" href="/css/Main/media-queries.css">
     <style>
-        .container {
-            max-width: 960px;
+        .card-body-prod {
+            padding: 0;
         }
 
-        .border-top {
-            border-top: 1px solid #e5e5e5;
+        .hero--video {
+            display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            align-items: center;
+            min-height: 600px;
         }
 
-        .border-bottom {
-            border-bottom: 1px solid #e5e5e5;
+        .navbar-fixed-top {
+            top: -70px;
+            opacity: 0;
         }
 
-        .border-top-gray {
-            border-top-color: #adb5bd;
+        .hero-image {
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 600px;
+            margin: 0 auto;
+            right: 0;
+            left: 0;
+            -o-object-fit: cover;
+            object-fit: cover;
         }
 
-        .box-shadow {
-            box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+        .hero .search {
+            position: relative;
+            vertical-align: middle;
+            z-index: 2;
         }
 
-        .lh-condensed {
-            line-height: 1.25;
+        .hero .search input {
+            width: 100%;
+            height: 76px;
+            line-height: 76px;
+            border: 1px solid #111;
+            background: rgba(0, 0, 0, 0.8);
+            font-size: 27px;
+            padding: 5px 5px 5px 47px;
+            color: #fff;
+            position: relative;
+            border-radius: 0;
         }
 
-        .truncateLongTexts {
+        .hero .search button {
+            position: absolute;
+            top: 6px;
+            right: 6px;
+            color: #fff;
+            background: #88687b;
+            font-size: 27px;
+            height: 65px;
+            line-height: 65px;
+            width: 68px;
+            padding: 0;
+            border: 0;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #000;
+            color: #000;
+            position: fixed;
+            padding: 0;
+            bottom: 0;
+            width: 100%;
+            height: 30px;
+
+        }
+
+        .social {
+            padding-bottom: 15px;
+
+        }
+
+        
+
+        .content {
+            width: 94%;
+            margin: 4em auto;
+            font-size: 20px;
+            line-height: 30px;
+            text-align: justify;
+        }
+
+        .logo {
+            line-height: 60px;
+            position: fixed;
+            float: left;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        .userMenu {
+            line-height: 60px;
+            position: fixed;
+            float: right;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
+
+        nav {
+            position: fixed;
+            width: 100%;
+            line-height: 60px;
+            z-index: 3;
+        }
+
+        nav ul {
+            line-height: 60px;
+            list-style: none;
+            background: rgba(0, 0, 0, 0);
+            color: #fff;
+            padding: 0;
+            text-align: right;
+            margin: 0;
+            padding-right: 40px;
+            transition: 1s;
+        }
+
+        nav.black ul {
+            background: #000;
+        }
+
+        nav ul li {
+            display: inline-block;
+            padding: 16px 40px;;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .menu-icon {
+            line-height: 60px;
+            width: 100%;
+            background: #000;
+            text-align: right;
+            box-sizing: border-box;
+            padding: 15px 24px;
+            cursor: pointer;
+            color: #fff;
+            display: none;
+        }
+
+        .user2 {
+            display: none;
+        }
+
+        .card-columns {
+            column-count: 4;
+        }
+
+        @media (max-width: 786px) {
+            header {
+                width: 100%;
+                height: 60vh;
+                background: url(/img/hero.png) no-repeat 50% 50%;
+                background-size: cover;
+            }
+
+            #user1 {
+                display: none;
+            }
+
+            .user2 {
+                display: inline-block;
+            }
+
+            .logo {
+                position: fixed;
+                top: 0;
+                margin-top: 16px;
+            }
+
+            nav ul {
+                max-height: 0px;
+                background: #000;
+            }
+
+            nav {
+                overflow: hidden;
+            }
+
+            nav.black ul {
+                background: #000;
+            }
+
+            .showing {
+                max-height: 34em;
+                overflow: visible;
+            }
+
+            nav ul li {
+                box-sizing: border-box;
+                width: 100%;
+                padding: 5px;
+                text-align: center;
+            }
+
+            .menu-icon {
+                display: block;
+            }
+
+            .card-columns {
+                column-count: 1;
+            }
+
+        }
+
+.truncateLongTexts {
             width: 100px;
             white-space: nowrap;
             overflow: hidden;
-            text-overflow: ellipsis // This is where the magic happens
+            text-overflow: ellipsis;
         }
     </style>
-    <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"
-          crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
-            crossorigin="anonymous"></script>
+
+
 </head>
-<body class="sb-nav-fixed">
-<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="/Index">Pikto</a>
-    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i>
-    </button>
-    <!-- Navbar Search-->
-    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
-        <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for..." aria-label="Search"
-                   aria-describedby="basic-addon2"/>
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
+<body>
+<!-- Top menu -->
+
+    <nav style="background-color:black;">
+        <div class="menu-icon">
+
+            <div>
+
             </div>
+
+            <i class="fa fa-bars fa-2x"></i>
+
+
         </div>
-    </form>
-    <!-- Navbar-->
-    <ul class="navbar-nav ml-auto ml-md-0">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">Settings</a>
-                <a class="dropdown-item" href="#">Activity Log</a>
-                <div class="dropdown-divider"></div>
-                <form class="dropdown-item" action="/logout" method="post">
-                    <input type="hidden" name="_csrf" value=""/>
-                    <button type="submit" class="btn btn-primary">Logout</button>
-                </form>
-            </div>
-        </li>
-    </ul>
-</nav>
-<div id="layoutSidenav">
-    <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
 
-            <!--<div class="sb-sidenav-menu">-->
-                <!--<div class="profile-userpic">-->
-                    <!--<img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624"-->
-                         <!--class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">-->
-                <!--</div>-->
+        <div class="logo">
+            <a href="http://localhost:8888/Index/"><img style="float: left; margin-right: 1%;" src="/img/pikto.png"
+                                                        width="100"/></a>
+        </div>
 
-                <!--<div class="profile-usertitle">-->
-                    <!--<div class="profile-usertitle-name">-->
-                        <!--{{userData.firstName}}-->
-                        <!--<div class="profile-usertitle-name">-->
-                            <!--{{userData.lastName}}-->
-                            <!--<div class="profile-usertitle-name">-->
-                                <!--{{userData.email}}-->
-                                <!--<div class="profile-usertitle-job">-->
-                                    <!--{{userData.mobileNr}}-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
 
-                    <!--<div class="profile-userbuttons">-->
-                    <!--</div>-->
-                    <!--<div class="nav">-->
-                        <!--<div class="sb-sidenav-menu-heading">Admin</div>-->
-                        <!--<a class="nav-link" href="http://localhost:8888/User">-->
-                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                            <!--Dashboard-->
-                        <!--</a>-->
-                        <!--<a class="nav-link" href="http://localhost:8888/User/Checkout">-->
-                            <!--<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>-->
-                            <!--Cart-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="sb-sidenav-footer">-->
-                <!--<a data-toggle="modal" data-target="#editModal">-->
-                    <!--<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"-->
-                         <!--class="bi bi-gear" viewBox="0 0 16 16">-->
-                        <!--<path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>-->
-                        <!--<path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>-->
-                    <!--</svg>-->
-                <!--</a>-->
-            <!--</div>-->
-        </nav>
-    </div>
+        <div class="menu">
+            <ul>
+                <li><a href="http://localhost:8888/Index/Category/1">Backgrounds</a></li>
+                <li><a href="http://localhost:8888/Index/Category/2">Stockphotos</a></li>
+                <li><a href="http://localhost:8888/Index/Category/3">Posters</a></li>
 
-    <div id="layoutSidenav_content">
+             
+            </ul>
+        </div>
+    </nav>
+ 
 
-        <main>
-            <div class="container-fluid">
-
+<div class="container" style="max-width:90%; padding-top:3%; ">
+  
                 <div class="container" style="padding-top: 5%">
 
                     <div class="row">
@@ -330,63 +478,95 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
-    </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="/js/Admin/scripts.js"></script>
-<script>
-    // Example starter JavaScript for disabling form submissions if there are invalid fields
-    (function () {
-        'use strict';
-        window.addEventListener('load', function () {
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.getElementsByClassName('needs-validation');
 
-            // Loop over them and prevent submission
-            var validation = Array.prototype.filter.call(forms, function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
+<!-- Footer -->
 
-                }, false);
-            });
-        }, false);
-    })();
-</script>
-<script>
-    var active = false;
-    function promoValidation() {
-        var value = $("#promoId").val();
-        console.log(value);
-        if (value === "Rabatt2021" && active === false) {
-            active = true;
-            var promo = parseInt($("#grandTotal").text());
-            var promo2 = promo * 0.1;
-            promo = promo * 0.9;
-            promo = Math.round(promo  * 100) / 100;
-            promo2 = Math.round(promo2  * 100) / 100;
-            console.log(promo);
-            console.log(promo2);
-            $("#grandTotal").text(promo);
-            $("#promotion").text("Active Promo: (Rabatt2021)").show().append("<span>"+promo2+'</span>');
+<footer class="footer">
 
-            $("#promoSuccess").text("Promo Discount").show().addClass("text-success");
-            return $("#redeemvalidation").text("Valid promo: 10%").addClass("text-success");
-        } else {
-            if (active){
-                return $("#redeemvalidation").text("Promo already active").addClass("text-danger")
-            }
-            return $("#redeemvalidation").text("Not a valid promo").addClass("text-danger")
-        }
-    }
-</script>
+    <div class="social">
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="#">About</a></li>
+            <li class="list-inline-item"><a href="#">Contact</a></li>
+            <li class="list-inline-item"><a href="#">Terms</a></li>
+            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        </ul>
+    </div>
+</footer>
 </body>
+<!-- Javascript -->
+<script src="/js/Main/jquery-3.3.1.min.js"></script>
+<script src="/js/Main/jquery-migrate-3.0.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+<script src="/js/Main/jquery.backstretch.min.js"></script>
+<script src="/js/Main/wow.min.js"></script>
+<script src="/js/Main/scripts.js"></script>
+<script>
+    $(document).ready(function () {
+        $(".menu-icon").on("click", function () {
+            $("nav ul").toggleClass("showing");
+        });
+ 
+
+
+
+
+  $("#searchValue").on("keyup", function() {
+
+
+    var clickedBtnID = $(this).val();
+        cardContainer = document.getElementById("MyCards");
+        cards = cardContainer.getElementsByClassName("card");
+        for (i = 0; i < cards.length; i++) {
+            title = cards[i].querySelector(".card-body h5.card-title");
+            if (title.innerText.indexOf(clickedBtnID) > -1) {
+                cards[i].style.display = "";
+            } else {
+                cards[i].style.display = "none";
+            }
+        }
+    });
+ });
+    // Scrolling Effect
+
+    $(window).on("scroll", function () {
+        if ($(window).scrollTop()) {
+            $('nav').addClass('black');
+        }
+
+        else {
+            $('nav').removeClass('black');
+        }
+    });
+
+    function myFunction() {
+        var text = document.getElementById("searchValue").value;
+        var concat = "http://localhost:8888/Index/Search/" + text;
+        window.location.replace(concat);
+
+    }
+
+
+    var loggedin = $("#login").attr("class");
+    console.log(loggedin);
+
+    if (loggedin === "loggedintrue") {
+        $("#login").css("display", "none");
+        $("#true").css("display", "inline-block");
+        $("#loggedintrue").css("display", "inline-block");
+        $("#loggedinfalse").css("display", "none");
+
+
+    }
+
+
+</script>
+
+
 </html>
