--- a/src/main/resources/templates/Frontend/Main/ProductPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/ProductPage.mustache
@@ -96,7 +96,7 @@
                     </svg>
                 </a></li>
 
-                 <li id="loggedintrue" style="display:none;"><a href="http://localhost:8888/User/Checkout/{{userData.userId}}">
+                 <li id="loggedintrue" style="display:none;"><a href="http://localhost:8888/User/Checkout">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                          class="bi bi-cart-fill"viewBox="0 0 16 16">
                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -311,6 +311,18 @@ $('.stars').each(function (index, value) {
 
      
     });
+     var loggedin = $("#login").attr("class");
+    console.log(loggedin);
+
+    if (loggedin === "loggedintrue") {
+        $("#login").css("display", "none");
+        $("#true").css("display", "inline-block");
+        $("#loggedintrue").css("display", "inline-block");
+        $("#loggedinfalse").css("display", "none");
+
+
+    }
+
 
 </script>
 </body>
