--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -52,13 +52,9 @@
  <div class="logo" >
      <a href="http://localhost:8888/Index"><img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100"/></a>
         </div>
-          
-            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
+        <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#" onclick='clicked()'><i class="fas fa-bars"></i></button>
         <div class="d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
-          
-   <a href="http://localhost:8888/logout"><button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">Logout</button> </a>     
-
-
+        <a href="http://localhost:8888/logout"><button type="button" class="btn btn-default btn-sm" style="color:black; background-color:white; margin-right:1.5em;">Logout</button> </a>     
         </div>
         </nav>
     
@@ -84,7 +80,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <a class="nav-link" href="http://localhost:8888/Index/Checkout/{{sessionId}}">
+                        <a class="nav-link" href="http://localhost:8888/User/Checkout/">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Cart
                         </a>
@@ -96,7 +92,6 @@
                 </div>
                <div class="sb-sidenav-footer">
                       <p data-toggle="modal" data-target="#editModal" style="float:left;"><i class="fas fa-cog" style="margin-right:5px"></i>Settings</p>
-
                     </div>
 
             </div>
@@ -215,70 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card mb-4">
-                    <div class="card-header">
-                        <i class="fas fa-table mr-1"></i>
-                        Products
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTableProducts" width="100%" cellspacing="0">
-                                <thead>
-                                <tr>
-                                    <th>ProductID</th>
-                                    <th>UserID</th>
-                                    <th>Title</th>
-                                    <th class="hide">summary
-                                    </td>
-                                    <th class="hide">type
-                                    </td>
-                                    <th>Price</th>
-                                    <th class="hide">discount
-                                    </td>
-                                    <th>Date</th>
-                                    <th class="hide">content
-                                    </td>
-                                    <th>ProductURL</th>
-                                </tr>
-                                </thead>
-                                <tfoot>
-                                <tr>
-                                    <th>ProductID</th>
-                                    <th>UserID</th>
-                                    <th>Title</th>
-                                    <th class="hide">summary
-                                    </td>
-                                    <th class="hide">type
-                                    </td>
-                                    <th>Price</th>
-                                    <th class="hide">discount
-                                    </td>
-                                    <th>Date</th>
-                                    <th class="hide">content
-                                    </td>
-                                    <th>ProductURL</th>
-                                </tr>
-                                </tfoot>
-                                <tbody>
-                                {{#userProducts}}
-                                <tr>
-                                    <td>{{productId}}</td>
-                                    <td>{{userId}}</td>
-                                    <td>{{title}}</td>
-                                    <td class="hide">{{summary}}</td>
-                                    <td class="hide">{{type}}</td>
-                                    <td>{{price}}</td>
-                                    <td class="hide">{{discount}}</td>
-                                    <td>{{publishedAt}}</td>
-                                    <td class="hide">{{content}}</td>
-                                    <td>{{productUrl}}</td>
-                                </tr>
-                                {{/userProducts}}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+        
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table mr-1"></i>
@@ -387,29 +319,31 @@
    <div style="background-color:black; width:100%; height:0.7em;">
                      
                     </div>
-             <div class="modal-header">
+          <div class="modal-header">
                 <h5 class="modal-title">Change password</h5>
             </div>
             <div class="modal-body" id="modalBody">
-                <form method="POST" action="/Admin/updateUser" novalidate>
+                <form method="POST" action="/User/NewPassword" novalidate>
+
+                  <div class="form-group row" style="display:none;">
+                        <label for="userId" class="col-4 col-form-label">username</label>
+                        <div class="col-8">
+                            <input id="userId" name="username" type="password" class="form-control">
+                        </div>
+                    </div>
+
                    <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">Old password</label>
                         <div class="col-8">
-                            <input id="userId" name="userId" type="password" class="form-control">
+                            <input id="userId" name="oldpassword" type="password" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">New password</label>
                         <div class="col-8">
-                            <input id="Firstname" name="firstName" type="password" class="form-control">
+                            <input id="Firstname" name="newpassword" type="password" class="form-control">
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="summary" class="col-4 col-form-label">New password</label>
-                        <div class="col-8">
-                            <input id="Lastname" name="lastName" type="password" class="form-control">
-                        </div>
-                    </div>       
+                    </div>      
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
