--- a/src/main/resources/templates/Frontend/Admin/Orders.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Orders.mustache
@@ -56,7 +56,7 @@
 
                 <div class="profile-userpic">
                     <img src="{{userData.pictureUrl}}" class="img-responsive"
-                         style="display:block; margin: 0 auto; padding-top: 20px; ">
+                         style="display:block; margin: 0 auto; margin-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
                     <div class="profile-usertitle-name">
