--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -326,11 +326,11 @@
                 <div class="card-body" style="margin:0; padding:0; position: relative; display: inline-block;">
                     <h5 class="card-title" style="display:none;">{{title}}</h5>
                     <a href="http://localhost:8888/Index/{{productId}}">
-                        <a href="#" class="badge badge-danger" style="
+                        <span class="badge badge-danger" style="
                             margin-left: 2%;
                             position: absolute;
                             margin-top: 2%;
-                            font-size: 1.3em;">{{discount}}</a>
+                            font-size: 1.3em;">{{discount}}</span>
                         <img src="{{productUrl}}" alt="Italian Trulli" style="padding-bottom:1.25rem;">
                     </a>
                 </div>
