--- a/src/main/resources/templates/Frontend/User/userPage.mustache
+++ b/src/main/resources/templates/Frontend/User/userPage.mustache
@@ -272,7 +272,6 @@
         </main>
 
     </div>
-
     <div class="modal" tabindex="-1" role="dialog" id="editModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -396,10 +395,11 @@
                         }
                     });
 
-
                     $("body").toggleClass("sb-sidenav-toggled");
-
                 }
             </script>
+        </div>
+    </div>
+</div>
 </body>
 </html>
