--- a/src/main/resources/templates/Frontend/User/Checkout.mustache
+++ b/src/main/resources/templates/Frontend/User/Checkout.mustache
@@ -37,6 +37,7 @@
 }
 
 .truncateLongTexts {
+    padding-left:20px;
             width: 100px;
             white-space: nowrap;
             overflow: hidden;
