--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -326,11 +326,12 @@
                 <div class="card-body" style="margin:0; padding:0; position: relative; display: inline-block;">
                     <h5 class="card-title" style="display:none;">{{title}}</h5>
                     <a href="http://localhost:8888/Index/{{productId}}">
-                        <a href="#" class="badge badge-danger" style="
+                        <div class="badge badge-danger" style="
+                        display:none;
                             margin-left: 2%;
                             position: absolute;
                             margin-top: 2%;
-                            font-size: 1.3em;">{{discount}}</a>
+                            font-size: 1.3em;">{{discount}}</div>
                         <img src="{{productUrl}}" alt="Italian Trulli" style="padding-bottom:1.25rem;">
                     </a>
                 </div>
@@ -377,6 +378,8 @@
                console.log(sale);
                discount[i].style.display = "none";
            } else {
+          discount[i].style.display = "inline-block";
+
                sale = sale * 100;
                discount[i].innerText = (parseFloat(sale).toFixed(0)+"%");
            }
